fix - definitions popup wrapping
- currently definitions popup doesn't wrap, so can go off the page
- added fixed width in css
- also added design; title and border

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 div.legendTooltip {
     position: absolute;
-    text-align: center;
+    text-align: left;
     padding: 2px;
     font: 10px;
-    background: lightgrey;
-    border: 0px;
-    border-radius: 4px;
+    background: white;
+    border-style: groove;
+    border-radius: 1px;
     pointer-events: none;
     display: block;
+    max-width: 300px;
 }
 
 .centred {
